--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 120f030
+	base = 7e4933f
 	trimbase = 
 	parent = rpm/noetic/cob_navigation_config
-	previous = 
+	previous = 120f030
