--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db88ac7
+	base = 789abb0
 	trimbase = 
 	parent = rpm/noetic/cob_mapping_slam
-	previous = 
+	previous = db88ac7
