--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f965e5a
+	base = 67ff66d
 	trimbase = 
 	parent = rpm/noetic/cob_map_accessibility_analysis
-	previous = 
+	previous = f965e5a
