--- a/tracks.yaml
+++ b/tracks.yaml
@@ -113,9 +113,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
     devel_branch: indigo_release_candidate
+    last_version: 0.6.11
     name: upstream
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: git@github.com:ipa320/cob_navigation-release.git
     release_tag: :{version}
     ros_distro: noetic
