--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = becd8b5
-	trimbase = 9b49588
+	trimbase = 
 	parent = upstream
 	previous = 0dfbd28
