--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = 92b5218a
-	trimbase = 
+	base = 3259863c
+	trimbase = 92b5218a
 	parent = upstream
 	previous = 0c6222fe
