--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = 2f7e4a6
-	trimbase = 977dd06
+	trimbase = 
 	parent = upstream
 	previous = 0dfbd28
