--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = ccda2e4
-	trimbase = 8b1aa5e
+	trimbase = 
 	parent = upstream
 	previous = 0dfbd28
