--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
 	base = 488eb9e
-	trimbase = e4b6799
+	trimbase = 
 	parent = upstream
 	previous = 0dfbd28
