--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 1a4def22
-	trimbase = 
+	base = c037c470
+	trimbase = 1a4def22
 	parent = upstream
 	previous = a902cd63
