--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = edaab5f2
-	trimbase = 
+	base = c68bf59a
+	trimbase = edaab5f2
 	parent = upstream
 	previous = a902cd63
