--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = 07467bf8
-	trimbase = 
+	base = 3bb4850a
+	trimbase = 07467bf8
 	parent = upstream
 	previous = a902cd63
