--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = 561a2bcf
-	trimbase = 
+	base = 2b862dda
+	trimbase = 561a2bcf
 	parent = upstream
 	previous = a902cd63
