--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = 2f425151
-	trimbase = 76f908f0
+	trimbase = 
 	parent = upstream
 	previous = a902cd63
