--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = da025b85
-	trimbase = 
+	base = 8febc1b9
+	trimbase = da025b85
 	parent = upstream
 	previous = ce548af8
