--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = d4ba6955
-	trimbase = b82106df
+	trimbase = 
 	parent = upstream
 	previous = a902cd63
